unpackaged/main/default/objects/Account/fields/HeroSignageDisplay__c.field-meta.xml
<CustomField>
    <fullName>HeroSignageDisplay__c</fullName>
    <label>Hero Signage / Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>