unpackaged/main/default/objects/Account/fields/HLAccountName__c.field-meta.xml
<CustomField>
    <fullName>HLAccountName__c</fullName>
    <label>HL Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>