unpackaged/main/default/objects/Account/fields/Import_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Import_License_Required__c</fullName>
    <label>Import License Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>