unpackaged/main/default/objects/Account/fields/International_Documentation_Checklist__c.field-meta.xml
<CustomField>
    <fullName>International_Documentation_Checklist__c</fullName>
    <label>International Documentation Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Proforma</fullName>
            </value>
            <value>
                <fullName>Certificate of Analysis</fullName>
            </value>
            <value>
                <fullName>Certificate of Analysis with Lot Codes</fullName>
            </value>
            <value>
                <fullName>Certificate of Origin</fullName>
            </value>
            <value>
                <fullName>Certificate of Origin with Lot Codes</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>Certificate of Freesale</fullName>
            </value>
            <value>
                <fullName>Certificate of Freesale with Lot Codes</fullName>
            </value>
            <value>
                <fullName>Bill of Lading</fullName>
            </value>
            <value>
                <fullName>Certificate of Age</fullName>
            </value>
            <value>
                <fullName>Annex VIII</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>