unpackaged/main/default/objects/Account/fields/Is_Distributor_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_Distributor_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Distributor Vendor</label>
    <type>Checkbox</type>
</CustomField>