unpackaged/main/default/objects/Account/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <label>LinkedIn Profile</label>
    <length>20</length>
    <type>Text</type>
</CustomField>