unpackaged/main/default/objects/Account/fields/MaxLargeBrandDisplayPotential__c.field-meta.xml
<CustomField>
    <fullName>MaxLargeBrandDisplayPotential__c</fullName>
    <inlineHelpText>What is the maximum large brand display size potential?
Large Brand = Jim Beam, Pinnacle, etc.
Other Brand = Basil, Knob, etc
.</inlineHelpText>
    <label>Max Large Brand Display Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bin (1-3 phys cs)</fullName>
            </value>
            <value>
                <fullName>Small (3-8 phys cs)</fullName>
            </value>
            <value>
                <fullName>Medium (8-20 phys cs)</fullName>
            </value>
            <value>
                <fullName>Large (20-40 phys cs)</fullName>
            </value>
            <value>
                <fullName>X Large (40-80 phys cs)</fullName>
            </value>
            <value>
                <fullName>Jumbo (80+ phys cs)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>