unpackaged/main/default/objects/Account/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 – Cosmopolitan Centers</fullName>
            </value>
            <value>
                <fullName>2 – Affluent Suburban Spreads</fullName>
            </value>
            <value>
                <fullName>3 – Comfortable Country</fullName>
            </value>
            <value>
                <fullName>4 – Struggling Urban Cores</fullName>
            </value>
            <value>
                <fullName>5 – Modest Working Towns</fullName>
            </value>
            <value>
                <fullName>6 – Plain Rural Living</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>