unpackaged/main/default/objects/Account/fields/NonPremiseAccountType__c.field-meta.xml
<CustomField>
    <fullName>NonPremiseAccountType__c</fullName>
    <label>Non-Premise Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Non-Licensed Accounts</fullName>
            </value>
            <value>
                <fullName>Industry Association</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>