unpackaged/main/default/objects/Account/fields/Patio__c.field-meta.xml
<CustomField>
    <fullName>Patio__c</fullName>
    <label>Patio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>