unpackaged/main/default/objects/Account/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Airport/Port Location Serviced by the GTR Account</description>
    <label>Port Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Type</field>
            <operation>equals</operation>
            <value>Airport</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Airport)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>