unpackaged/main/default/objects/Account/fields/Port_Code__c.field-meta.xml
<CustomField>
    <fullName>Port_Code__c</fullName>
    <description>IATA airport code</description>
    <label>Port Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>