unpackaged/main/default/objects/Account/fields/Price_Posting_State__c.field-meta.xml
<CustomField>
    <fullName>Price_Posting_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Posting State</label>
    <type>Checkbox</type>
</CustomField>