unpackaged/main/default/objects/Account/fields/Pricing_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Date_Type__c</fullName>
    <label>Pricing Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO Date</fullName>
            </value>
            <value>
                <fullName>Ship Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>