unpackaged/main/default/objects/Account/fields/Primary_GTR_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_GTR_Customer__c</fullName>
    <label>Primary GTR Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AER RIANTA</fullName>
            </value>
            <value>
                <fullName>AIR INDIA</fullName>
            </value>
            <value>
                <fullName>AMERICA OTHERS</fullName>
            </value>
            <value>
                <fullName>ANWAY</fullName>
            </value>
            <value>
                <fullName>ARI</fullName>
            </value>
            <value>
                <fullName>ASIAEURO</fullName>
            </value>
            <value>
                <fullName>BAHRAIN DUTY FREE</fullName>
                <label>BAHRAIN DF</label>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CARIBBEAN</fullName>
            </value>
            <value>
                <fullName>CDFG</fullName>
            </value>
            <value>
                <fullName>CDFI</fullName>
            </value>
            <value>
                <fullName>CDFL</fullName>
            </value>
            <value>
                <fullName>CHINA AIRLINES</fullName>
            </value>
            <value>
                <fullName>CITY PLUS</fullName>
            </value>
            <value>
                <fullName>CNSC</fullName>
            </value>
            <value>
                <fullName>CSG</fullName>
            </value>
            <value>
                <fullName>DDFS</fullName>
            </value>
            <value>
                <fullName>DELHI DUTY FREE PVT LTD</fullName>
            </value>
            <value>
                <fullName>DFA</fullName>
            </value>
            <value>
                <fullName>DFASS</fullName>
            </value>
            <value>
                <fullName>DFP</fullName>
            </value>
            <value>
                <fullName>DFS</fullName>
            </value>
            <value>
                <fullName>DF STORE LTD</fullName>
            </value>
            <value>
                <fullName>DUBAI DUTY FREE</fullName>
                <label>DUBAI DF</label>
            </value>
            <value>
                <fullName>DUFRY</fullName>
            </value>
            <value>
                <fullName>EMPIRE SPIRITS</fullName>
            </value>
            <value>
                <fullName>EUROPE OTHERS</fullName>
            </value>
            <value>
                <fullName>EU WHOLESALER</fullName>
            </value>
            <value>
                <fullName>EVER RICH</fullName>
            </value>
            <value>
                <fullName>FLEMINGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>