unpackaged/main/default/objects/Account/fields/ProgramPartner__c.field-meta.xml
<CustomField>
    <fullName>ProgramPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Partner</label>
    <type>Checkbox</type>
</CustomField>