unpackaged/main/default/objects/Account/fields/PRs_Over_50K_Current_year__c.field-meta.xml
<CustomField>
    <fullName>PRs_Over_50K_Current_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PR’s Over 50K ( Current year)</label>
    <type>Checkbox</type>
</CustomField>