unpackaged/main/default/objects/Account/fields/RacksEndCaps__c.field-meta.xml
<CustomField>
    <fullName>RacksEndCaps__c</fullName>
    <inlineHelpText>Are racks or end caps allowed?</inlineHelpText>
    <label>Racks / End Caps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>End Caps</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Racks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>