unpackaged/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Account Region.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Region</fullName>
            </value>
            <value>
                <fullName>Control States &amp; Na Region</fullName>
            </value>
            <value>
                <fullName>East Region</fullName>
            </value>
            <value>
                <fullName>Franchise Region</fullName>
            </value>
            <value>
                <fullName>Midsouth Region</fullName>
            </value>
            <value>
                <fullName>West Region</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>GTR HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>