unpackaged/main/default/objects/Account/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTR Retail Parent Account</description>
    <label>Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Retailer)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>