unpackaged/main/default/objects/Account/fields/Sale_type__c.field-meta.xml
<CustomField>
    <fullName>Sale_type__c</fullName>
    <description>GTR Sale Type</description>
    <label>Sale Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>