unpackaged/main/default/objects/Account/fields/Sales_Entity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Entity__c</fullName>
    <label>Sales Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>IntraCompany</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>