unpackaged/main/default/objects/Account/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Sales Org value imported from SAP</description>
    <label>Sales Org</label>
    <length>10</length>
    <type>Text</type>
</CustomField>