unpackaged/main/default/objects/Account/fields/Samplings__c.field-meta.xml
<CustomField>
    <fullName>Samplings__c</fullName>
    <inlineHelpText>Are sampling events allowed?</inlineHelpText>
    <label>Samplings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>