unpackaged/main/default/objects/Account/fields/SAP_DBA__c.field-meta.xml
<CustomField>
    <fullName>SAP_DBA__c</fullName>
    <label>DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>