unpackaged/main/default/objects/Account/fields/SAP_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Vendor_ID__c</fullName>
    <externalId>true</externalId>
    <label>Vendor ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>